--- a/app/views/questions/answer.html.erb
+++ b/app/views/questions/answer.html.erb
@@ -1,11 +1,11 @@
 
 <div class="container mx-2">
   <h1>Stupid coaching</h1>
-  <div class="container mx-2 my-4">
+  <div class="container mx-2 my-4 t-border">
     <p><%= @question%></p>
     <p>You</p>
   </div>
-  <div class="container mx-2 bg-warning">
+  <div class="container mx-2 bg-warning t-border">
     <p><%= @answer%></p>
     <p>Your coach</p>
   </div>
